# ConfigManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.h  main.cpp
src/config/: config_file.cpp  config_file.hpp  schema_loader.cpp  schema_loader.hpp  template_generator.cpp  template_generator.hpp  validator.cpp  validator.hpp
src/ui/: edit.cpp  edit.hpp  init.cpp  init.hpp  main_ui.cpp  main_ui.hpp  ui_utils.hpp
src/utils/: fs.cpp  fs.hpp
